--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -11,7 +11,8 @@ body {
 }
 
 html {
-  font-family: $baskerville;
+  // font-family: $baskerville;
+  font-family: $dosis;
   font-size: 14px;
 
   @media (min-width: 600px) {
