--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -9,6 +9,7 @@ $blue: #4a9ae1;
 $shadow-color: rgba(0, 0, 0, .2);
 
 $baskerville: 'Libre Baskerville', 'Times New Roman', Times, serif;
+$dosis: 'Dosis', sans-serif;
 $palatino: Palatino, 'Palatino LT STD', 'Palatino Linotype', 'Book Antiqua', 'Georgia', serif;
 $sans-font: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
