--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -61,7 +61,7 @@ footer,
 
   a {
     color: $default-color;
-    font-family: $sans-font;
+    font-family: $dosis;
   }
 }
 
@@ -80,7 +80,7 @@ footer,
 }
 
 footer {
-  font-family: $palatino;
+  font-family: $dosis;
   padding: 2rem 0;
   text-align: center;
 
