--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -3,7 +3,7 @@
 
   &-info {
     color: $default-tint;
-    font-family: $palatino;
+    font-family: $dosis;
     letter-spacing: .5px;
     text-align: center;
 
@@ -14,7 +14,7 @@
 
   &-title {
     color: $default-shade;
-    font-family: $sans-font;
+    font-family: $dosis;
     font-size: 4rem;
     margin: 1rem 0;
     text-align: center;
