--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,8 @@
           <h2 class="nav-title">{{ site.title }}</h2>
         </a>
         <ul>
-          <li><a href="{{ '/about' | prepend: site.url }}">About</a></li>
-          <li><a href="{{ site.baseurl }}/">Posts</a></li>
+          <li><a href="{{ '/about' | prepend: site.url }}" style="font-family: 'Dosis', sans-serif;">About</a></li>
+          <li><a href="{{ site.baseurl }}/" style="font-family: 'Dosis', sans-serif;">Posts</a></li>
         </ul>
     </div>
   </nav>
