Updated font, color and links

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,5 +1,6 @@
 $default-color: #555;
-$default-shade: #353535;
+// $default-shade: #353535;
+$default-shade: #555;
 $default-tint: #aaa;
 $grey-1: #979797;
 $grey-2: #e5e5e5;
