--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,8 @@
           <h2 class="nav-title" style="font-family: 'Dosis', sans-serif;">{{ site.title }}</h2>
         </a>
         <ul>
-          <li><a href="{{ '/about' | prepend: site.url }}">About</a></li>
+          <!-- <li><a href="{{ '/about' | prepend: site.url }}">About</a></li> -->
+          <li><a href="{{ site.author.url }}">About</a></li>
           <li><a href="{{ site.baseurl }}/" >Posts</a></li>
         </ul>
     </div>
