--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,12 +6,12 @@
   <body>
     <nav class="nav">
       <div class="nav-container">
-        <a href="{{ site.baseurl }}/">
+        <a href="{{ site.author.url }}/">
           <h2 class="nav-title" style="font-family: 'Dosis', sans-serif;">{{ site.title }}</h2>
         </a>
         <ul>
           <!-- <li><a href="{{ '/about' | prepend: site.url }}">About</a></li> -->
-          <li><a href="{{ site.author.url }}">About</a></li>
+          <!-- <li><a href="{{ site.author.url }}">About</a></li> -->
           <li><a href="{{ site.baseurl }}/" >Posts</a></li>
         </ul>
     </div>
