Posts -> All Posts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
         <ul>
           <!-- <li><a href="{{ '/about' | prepend: site.url }}">About</a></li> -->
           <!-- <li><a href="{{ site.author.url }}">About</a></li> -->
-          <li><a href="{{ site.baseurl }}/" >Posts</a></li>
+          <li><a href="{{ site.baseurl }}/" >All Posts</a></li>
         </ul>
     </div>
   </nav>
